--- a/src/locales/hi/translation.json
+++ b/src/locales/hi/translation.json
@@ -13,5 +13,104 @@
   "hero": {
     "title": "इलेक्ट्रॉनिक मरम्मत के लिए आपका विश्वसनीय साथी",
     "subtitle": "आपके सभी गैजेट्स के लिए तेज़, विश्वसनीय और सस्ती सेवाएं।"
+  },
+  "about": {
+    "hero": {
+      "title": "राकेश इलेक्ट्रॉनिक्स के बारे में",
+      "subtitle": "एक दशक से अधिक विशेषज्ञता और गुणवत्ता के प्रति प्रतिबद्धता के साथ असाधारण इलेक्ट्रॉनिक मरम्मत सेवाएं और प्रीमियम उपकरण प्रदान करने के लिए समर्पित।"
+    },
+    "story": {
+      "title": "हमारी कहानी",
+      "paragraph1": "इलेक्ट्रॉनिक मरम्मत को सुलभ और विश्वसनीय बनाने के दृष्टिकोण के साथ स्थापित, राकेश इलेक्ट्रॉनिक्स 10 से अधिक वर्षों से समुदाय की सेवा कर रहा है। जो एक छोटी मरम्मत दुकान के रूप में शुरू हुआ था, वह इलेक्ट्रॉनिक्स सेवाओं में एक विश्वसनीय नाम बन गया है।",
+      "paragraph2": "हमारी यात्रा एक सरल मिशन के साथ शुरू हुई: सभी इलेक्ट्रॉनिक उपकरणों के लिए ईमानदार, सस्ती और उच्च गुणवत्ता वाली मरम्मत सेवाएं प्रदान करना। वर्षों में, हमने अपनी विशेषज्ञता को प्रीमियम उपकरणों और अत्याधुनिक प्रौद्योगिकी समाधानों में विस्तारित किया है।",
+      "paragraph3": "आज, हम 1000 से अधिक सफल मरम्मत पूरी करने पर गर्व करते हैं और ग्राहक संतुष्टि और तकनीकी उत्कृष्टता के प्रति अपनी प्रतिबद्धता बनाए रखते हैं।"
+    },
+    "stats": {
+      "repairs": "मरम्मत पूर्ण",
+      "rating": "ग्राहक रेटिंग",
+      "support": "सहायता उपलब्ध",
+      "years": "वर्षों का अनुभव"
+    },
+    "values": {
+      "title": "हमारा मिशन और दृष्टिकोण",
+      "subtitle": "इलेक्ट्रॉनिक सेवाओं में उत्कृष्टता के प्रति हमारे मूल सिद्धांतों और प्रतिबद्धता द्वारा निर्देशित।"
+    },
+    "mission": {
+      "title": "हमारा मिशन",
+      "description": "गुणवत्तापूर्ण कारीगरी और ईमानदार प्रथाओं के माध्यम से ग्राहक संतुष्टि सुनिश्चित करते हुए विश्वसनीय, किफायती और पेशेवर इलेक्ट्रॉनिक मरम्मत सेवाएं प्रदान करना। हम इलेक्ट्रॉनिक उपकरणों के जीवन का विस्तार करने और इलेक्ट्रॉनिक अपशिष्ट को कम करने का प्रयास करते हैं।"
+    },
+    "vision": {
+      "title": "हमारा दृष्टिकोण",
+      "description": "क्षेत्र में अग्रणी इलेक्ट्रॉनिक्स सेवा प्रदाता बनना, जो नवाचार, विश्वसनीयता और असाधारण ग्राहक सेवा के लिए जाना जाता है। हम एक ऐसे भविष्य की कल्पना करते हैं जहां प्रौद्योगिकी सभी की निर्बाध सेवा करे।"
+    },
+    "coreValues": {
+      "title": "हमारे मूल मूल्य",
+      "subtitle": "राकेश इलेक्ट्रॉनिक्स में हम जो कुछ भी करते हैं, उसे संचालित करने वाले सिद्धांत।",
+      "quality": {
+        "title": "गुणवत्ता पहले",
+        "description": "हम अपनी मरम्मत और सेवाओं की गुणवत्ता में कभी समझौता नहीं करते।"
+      },
+      "reliability": {
+        "title": "विश्वसनीय सेवा",
+        "description": "निरंतर, भरोसेमंद सेवा जिस पर आप हर बार भरोसा कर सकते हैं।"
+      },
+      "trust": {
+        "title": "विश्वास और ईमानदारी",
+        "description": "पारदर्शी और ईमानदार प्रथाओं के माध्यम से स्थायी रिश्ते बनाना।"
+      },
+      "innovation": {
+        "title": "नवाचार",
+        "description": "नवीनतम तकनीक और मरम्मत तकनीकों के साथ आगे रहना।"
+      }
+    },
+    "team": {
+      "title": "हमारी टीम से मिलें",
+      "subtitle": "हमारी असाधारण सेवा गुणवत्ता के पीछे कुशल पेशेवर।",
+      "founder": {
+        "name": "राकेश शर्मा",
+        "role": "संस्थापक और मुख्य तकनीशियन",
+        "description": "इलेक्ट्रॉनिक्स मरम्मत में 15 से अधिक वर्षों के अनुभव के साथ, राकेश विशेषज्ञता और प्रौद्योगिकी के प्रति जुनून के साथ हमारी टीम का नेतृत्व करते हैं।"
+      },
+      "technicians": {
+        "name": "विशेषज्ञ तकनीशियन",
+        "role": "मरम्मत विशेषज्ञ",
+        "description": "हमारे प्रमाणित तकनीशियन विभिन्न इलेक्ट्रॉनिक उपकरणों में विशेषज्ञ हैं और नवीनतम मरम्मत तकनीकों के साथ अपडेट रहते हैं।"
+      },
+      "support": {
+        "name": "ग्राहक सहायता",
+        "role": "सहायता टीम",
+        "description": "हमारी समर्पित सहायता टीम मरम्मत प्रक्रिया के दौरान सुचारू संचार और उत्कृष्ट ग्राहक अनुभव सुनिश्चित करती है।"
+      }
+    }
+  },
+  "products": {
+    "hero": {
+      "title": "हमारे उत्पाद",
+      "subtitle": "अपने घर और कार्यालय की आवश्यकताओं के लिए प्रीमियम पंखे, विद्युत उपकरण और सहायक उपकरणों की हमारी व्यापक श्रृंखला की खोज करें।"
+    },
+    "search": {
+      "placeholder": "उत्पाद, श्रेणियां या सुविधाएं खोजें..."
+    },
+    "sort": {
+      "name": "नाम के अनुसार क्रमबद्ध करें",
+      "priceLow": "मूल्य: कम से अधिक",
+      "priceHigh": "मूल्य: अधिक से कम",
+      "rating": "सर्वोच्च रेटेड"
+    },
+    "categories": {
+      "title": "श्रेणियां"
+    },
+    "results": {
+      "allProducts": "सभी उत्पाद",
+      "items": "आइटम"
+    },
+    "buttons": {
+      "addToCart": "कार्ट में जोड़ें",
+      "outOfStock": "स्टॉक में नहीं"
+    },
+    "noResults": {
+      "title": "कोई उत्पाद नहीं मिला",
+      "description": "अपने खोज मानदंड को समायोजित करने का प्रयास करें या विभिन्न श्रेणियों को ब्राउज़ करें।"
+    }
   }
 }
